fixed placeholder image being too big

--- a/style.css
+++ b/style.css
@@ -138,7 +138,8 @@ body {
 
 .featured-image {
     width: 100%;
-    min-width: 600px;
+    max-width: 550px;
+    min-width: 500px;
     height: auto;
     border-radius: 20px;
     object-fit: cover;
